--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1219,12 +1219,13 @@ a:hover {
   /* line 213, ../scss/custom.scss */
   .thumbnail:hover img {
     border: 3px dotted #d2322d;
+    border-bottom: 3px solid #d2322d;
     -webkit-transition: border, 0.5s;
     -moz-transition: border, 0.5s;
     -o-transition: border, 0.5s;
     transition: border, 0.5s;
   }
-  /* line 217, ../scss/custom.scss */
+  /* line 218, ../scss/custom.scss */
   .thumbnail:hover h3 {
     background: #d2322d;
     -webkit-transition: background-color, 0.2s;
@@ -1236,35 +1237,35 @@ a:hover {
     -o-transition: padding, 0.2s;
     transition: padding, 0.2s;
   }
-  /* line 224, ../scss/custom.scss */
+  /* line 225, ../scss/custom.scss */
   .thumbnail:hover i {
     color: white;
   }
 }
 
-/* line 230, ../scss/custom.scss */
+/* line 231, ../scss/custom.scss */
 .thumb-title {
   min-height: 58px;
 }
 @media only all and (max-width: 320px) {
-  /* line 230, ../scss/custom.scss */
+  /* line 231, ../scss/custom.scss */
   .thumb-title {
     min-height: 35px;
   }
 }
 
-/* line 238, ../scss/custom.scss */
+/* line 239, ../scss/custom.scss */
 .modal {
   top: 10%;
 }
 
-/* line 246, ../scss/custom.scss */
+/* line 247, ../scss/custom.scss */
 .above-header {
   height: 500px;
   background-color: black;
 }
 
-/* line 251, ../scss/custom.scss */
+/* line 252, ../scss/custom.scss */
 #avatar {
   width: 17px;
   height: 17px;
@@ -1272,35 +1273,35 @@ a:hover {
   margin-right: 13px;
 }
 
-/* line 257, ../scss/custom.scss */
+/* line 258, ../scss/custom.scss */
 .visit-site {
   margin: 40px 0;
 }
 
-/* line 261, ../scss/custom.scss */
+/* line 262, ../scss/custom.scss */
 .col-content {
   padding-left: 0px;
   padding-right: 50px;
   overflow: hidden;
 }
-/* line 266, ../scss/custom.scss */
+/* line 267, ../scss/custom.scss */
 .col-content ul {
   list-style: disc !important;
 }
 @media only all and (max-width: 991px) {
-  /* line 261, ../scss/custom.scss */
+  /* line 262, ../scss/custom.scss */
   .col-content {
     padding-right: 40px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 261, ../scss/custom.scss */
+  /* line 262, ../scss/custom.scss */
   .col-content {
     padding-right: 0;
   }
 }
 
-/* line 278, ../scss/custom.scss */
+/* line 279, ../scss/custom.scss */
 .portfolio-desc {
   padding: 15px 0 45px 0;
 }
@@ -1308,16 +1309,16 @@ a:hover {
 /* 
  *  Soliloquy Slider 
  */
-/* line 287, ../scss/custom.scss */
+/* line 288, ../scss/custom.scss */
 .soliloquy-container img {
   width: 100%;
   height: auto;
 }
-/* line 291, ../scss/custom.scss */
+/* line 292, ../scss/custom.scss */
 .soliloquy-container .soliloquy-direction-nav {
   display: block !important;
 }
-/* line 294, ../scss/custom.scss */
+/* line 295, ../scss/custom.scss */
 .soliloquy-container .soliloquy-control-nav, .soliloquy-container .soliloquy-prev, .soliloquy-container .soliloquy-next {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
@@ -1326,7 +1327,7 @@ a:hover {
   -o-transition: opacity, 0.5s;
   transition: opacity, 0.5s;
 }
-/* line 299, ../scss/custom.scss */
+/* line 300, ../scss/custom.scss */
 .soliloquy-container:hover .soliloquy-control-nav, .soliloquy-container:hover .soliloquy-prev, .soliloquy-container:hover .soliloquy-next {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
@@ -1336,7 +1337,7 @@ a:hover {
   transition: opacity, 0.5s;
 }
 
-/* line 306, ../scss/custom.scss */
+/* line 307, ../scss/custom.scss */
 .design-slider {
   margin: 26px 0;
 }
@@ -1345,13 +1346,13 @@ a:hover {
  *  Twitter feed 
  */
 @media only all and (max-width: 991px) {
-  /* line 316, ../scss/custom.scss */
+  /* line 317, ../scss/custom.scss */
   .kmeta {
     font-size: 15px;
   }
 }
 
-/* line 321, ../scss/custom.scss */
+/* line 322, ../scss/custom.scss */
 .ktext {
   line-height: 19px !important;
   margin: 15px 0 !important;
@@ -1360,17 +1361,17 @@ a:hover {
 /* 
  *  Contact Form 
  */
-/* line 332, ../scss/custom.scss */
+/* line 333, ../scss/custom.scss */
 .cscfForm > p {
   margin-bottom: 20px;
 }
-/* line 335, ../scss/custom.scss */
+/* line 336, ../scss/custom.scss */
 .cscfForm label {
   margin-bottom: 10px;
   color: #2ea2cc;
 }
 
-/* line 341, ../scss/custom.scss */
+/* line 342, ../scss/custom.scss */
 #frmCSCF .btn {
   border: #0074a2;
   background-color: #0074a2;
@@ -1380,7 +1381,7 @@ a:hover {
   -o-transition: background-color, 0.25s;
   transition: background-color, 0.25s;
 }
-/* line 346, ../scss/custom.scss */
+/* line 347, ../scss/custom.scss */
 #frmCSCF .btn:hover {
   background-color: #2ea2cc;
   -webkit-transition: background-color, 0.25s;
@@ -1392,105 +1393,105 @@ a:hover {
 /* 
  *  Media Queries thumbs
  */
-/* line 357, ../scss/custom.scss */
+/* line 358, ../scss/custom.scss */
 .mq-list {
   padding-top: 30px;
 }
-/* line 359, ../scss/custom.scss */
+/* line 360, ../scss/custom.scss */
 .mq-list li {
   margin-right: 18px;
   padding: 0;
 }
 @media only all and (max-width: 1199px) {
-  /* line 359, ../scss/custom.scss */
+  /* line 360, ../scss/custom.scss */
   .mq-list li {
     margin-right: 15px;
   }
 }
 @media only all and (max-width: 991px) {
-  /* line 359, ../scss/custom.scss */
+  /* line 360, ../scss/custom.scss */
   .mq-list li {
     margin-right: 10px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 359, ../scss/custom.scss */
+  /* line 360, ../scss/custom.scss */
   .mq-list li {
     margin-right: 0.9%;
   }
 }
-/* line 374, ../scss/custom.scss */
+/* line 375, ../scss/custom.scss */
 .mq-list .smartphone {
   width: 8.1%;
 }
 @media only all and (min-width: 480px) and (max-width: 767px) {
-  /* line 374, ../scss/custom.scss */
+  /* line 375, ../scss/custom.scss */
   .mq-list .smartphone {
     width: 8%;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 374, ../scss/custom.scss */
+  /* line 375, ../scss/custom.scss */
   .mq-list .smartphone {
     width: 8.1%;
   }
 }
-/* line 383, ../scss/custom.scss */
+/* line 384, ../scss/custom.scss */
 .mq-list .tablet {
   width: 19.5%;
 }
 @media only all and (max-width: 767px) {
-  /* line 383, ../scss/custom.scss */
+  /* line 384, ../scss/custom.scss */
   .mq-list .tablet {
     width: 19.4%;
   }
 }
-/* line 389, ../scss/custom.scss */
+/* line 390, ../scss/custom.scss */
 .mq-list .netbook {
   width: 25.9%;
 }
-/* line 392, ../scss/custom.scss */
+/* line 393, ../scss/custom.scss */
 .mq-list .desktop {
   margin-right: 0;
   width: 40.5%;
 }
 
-/* line 399, ../scss/custom.scss */
+/* line 400, ../scss/custom.scss */
 .entry-content p {
   margin-bottom: 15px;
 }
-/* line 402, ../scss/custom.scss */
+/* line 403, ../scss/custom.scss */
 .entry-content img {
   margin: 10px 0 30px;
 }
 
-/* line 409, ../scss/custom.scss */
+/* line 410, ../scss/custom.scss */
 .credits td {
   padding: 3px !important;
 }
 @media only all and (max-width: 1199px) {
-  /* line 415, ../scss/custom.scss */
+  /* line 416, ../scss/custom.scss */
   .credits td {
     padding: 1px !important;
   }
 }
 
-/* line 421, ../scss/custom.scss */
+/* line 422, ../scss/custom.scss */
 .media, .description {
   margin-bottom: 30px;
 }
 
-/* line 425, ../scss/custom.scss */
+/* line 426, ../scss/custom.scss */
 .media img {
   margin: 0;
 }
-/* line 429, ../scss/custom.scss */
+/* line 430, ../scss/custom.scss */
 .media object {
   margin-right: 10px !important;
   margin-bottom: 15px !important;
 }
 
-/* line 434, ../scss/custom.scss */
+/* line 435, ../scss/custom.scss */
 .single-design .media {
   border: 1px solid black;
 }
@@ -1498,7 +1499,7 @@ a:hover {
 /*
  *  Admin Menu 
  */
-/* line 445, ../scss/custom.scss */
+/* line 446, ../scss/custom.scss */
 #adminmenu #menu-posts-design .wp-menu-image:before {
   content: '\f85' !important;
 }
