--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1210,22 +1210,22 @@ a:hover {
     width: 100% !important;
   }
 }
-/* line 204, ../scss/custom.scss */
+/* line 205, ../scss/custom.scss */
 .thumbnail .caption {
   text-align: center;
   padding: 10px 0 0 0;
 }
 @media only all and (min-width: 768px) {
-  /* line 213, ../scss/custom.scss */
+  /* line 214, ../scss/custom.scss */
   .thumbnail:hover img {
-    border: 3px dotted #d2322d;
+    border: 3px solid #d2322d;
     border-bottom: 3px solid #d2322d;
     -webkit-transition: border, 0.5s;
     -moz-transition: border, 0.5s;
     -o-transition: border, 0.5s;
     transition: border, 0.5s;
   }
-  /* line 218, ../scss/custom.scss */
+  /* line 221, ../scss/custom.scss */
   .thumbnail:hover h3 {
     background: #d2322d;
     -webkit-transition: background-color, 0.2s;
@@ -1237,35 +1237,35 @@ a:hover {
     -o-transition: padding, 0.2s;
     transition: padding, 0.2s;
   }
-  /* line 225, ../scss/custom.scss */
+  /* line 228, ../scss/custom.scss */
   .thumbnail:hover i {
     color: white;
   }
 }
 
-/* line 231, ../scss/custom.scss */
+/* line 234, ../scss/custom.scss */
 .thumb-title {
   min-height: 58px;
 }
 @media only all and (max-width: 320px) {
-  /* line 231, ../scss/custom.scss */
+  /* line 234, ../scss/custom.scss */
   .thumb-title {
     min-height: 35px;
   }
 }
 
-/* line 239, ../scss/custom.scss */
+/* line 242, ../scss/custom.scss */
 .modal {
   top: 10%;
 }
 
-/* line 247, ../scss/custom.scss */
+/* line 250, ../scss/custom.scss */
 .above-header {
   height: 500px;
   background-color: black;
 }
 
-/* line 252, ../scss/custom.scss */
+/* line 255, ../scss/custom.scss */
 #avatar {
   width: 17px;
   height: 17px;
@@ -1273,35 +1273,35 @@ a:hover {
   margin-right: 13px;
 }
 
-/* line 258, ../scss/custom.scss */
+/* line 261, ../scss/custom.scss */
 .visit-site {
   margin: 40px 0;
 }
 
-/* line 262, ../scss/custom.scss */
+/* line 265, ../scss/custom.scss */
 .col-content {
   padding-left: 0px;
   padding-right: 50px;
   overflow: hidden;
 }
-/* line 267, ../scss/custom.scss */
+/* line 270, ../scss/custom.scss */
 .col-content ul {
   list-style: disc !important;
 }
 @media only all and (max-width: 991px) {
-  /* line 262, ../scss/custom.scss */
+  /* line 265, ../scss/custom.scss */
   .col-content {
     padding-right: 40px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 262, ../scss/custom.scss */
+  /* line 265, ../scss/custom.scss */
   .col-content {
     padding-right: 0;
   }
 }
 
-/* line 279, ../scss/custom.scss */
+/* line 282, ../scss/custom.scss */
 .portfolio-desc {
   padding: 15px 0 45px 0;
 }
@@ -1309,16 +1309,16 @@ a:hover {
 /* 
  *  Soliloquy Slider 
  */
-/* line 288, ../scss/custom.scss */
+/* line 291, ../scss/custom.scss */
 .soliloquy-container img {
   width: 100%;
   height: auto;
 }
-/* line 292, ../scss/custom.scss */
+/* line 295, ../scss/custom.scss */
 .soliloquy-container .soliloquy-direction-nav {
   display: block !important;
 }
-/* line 295, ../scss/custom.scss */
+/* line 298, ../scss/custom.scss */
 .soliloquy-container .soliloquy-control-nav, .soliloquy-container .soliloquy-prev, .soliloquy-container .soliloquy-next {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
@@ -1327,7 +1327,7 @@ a:hover {
   -o-transition: opacity, 0.5s;
   transition: opacity, 0.5s;
 }
-/* line 300, ../scss/custom.scss */
+/* line 303, ../scss/custom.scss */
 .soliloquy-container:hover .soliloquy-control-nav, .soliloquy-container:hover .soliloquy-prev, .soliloquy-container:hover .soliloquy-next {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
@@ -1337,7 +1337,7 @@ a:hover {
   transition: opacity, 0.5s;
 }
 
-/* line 307, ../scss/custom.scss */
+/* line 310, ../scss/custom.scss */
 .design-slider {
   margin: 26px 0;
 }
@@ -1346,13 +1346,13 @@ a:hover {
  *  Twitter feed 
  */
 @media only all and (max-width: 991px) {
-  /* line 317, ../scss/custom.scss */
+  /* line 320, ../scss/custom.scss */
   .kmeta {
     font-size: 15px;
   }
 }
 
-/* line 322, ../scss/custom.scss */
+/* line 325, ../scss/custom.scss */
 .ktext {
   line-height: 19px !important;
   margin: 15px 0 !important;
@@ -1361,17 +1361,17 @@ a:hover {
 /* 
  *  Contact Form 
  */
-/* line 333, ../scss/custom.scss */
+/* line 336, ../scss/custom.scss */
 .cscfForm > p {
   margin-bottom: 20px;
 }
-/* line 336, ../scss/custom.scss */
+/* line 339, ../scss/custom.scss */
 .cscfForm label {
   margin-bottom: 10px;
   color: #2ea2cc;
 }
 
-/* line 342, ../scss/custom.scss */
+/* line 345, ../scss/custom.scss */
 #frmCSCF .btn {
   border: #0074a2;
   background-color: #0074a2;
@@ -1381,7 +1381,7 @@ a:hover {
   -o-transition: background-color, 0.25s;
   transition: background-color, 0.25s;
 }
-/* line 347, ../scss/custom.scss */
+/* line 350, ../scss/custom.scss */
 #frmCSCF .btn:hover {
   background-color: #2ea2cc;
   -webkit-transition: background-color, 0.25s;
@@ -1393,105 +1393,105 @@ a:hover {
 /* 
  *  Media Queries thumbs
  */
-/* line 358, ../scss/custom.scss */
+/* line 361, ../scss/custom.scss */
 .mq-list {
   padding-top: 30px;
 }
-/* line 360, ../scss/custom.scss */
+/* line 363, ../scss/custom.scss */
 .mq-list li {
   margin-right: 18px;
   padding: 0;
 }
 @media only all and (max-width: 1199px) {
-  /* line 360, ../scss/custom.scss */
+  /* line 363, ../scss/custom.scss */
   .mq-list li {
     margin-right: 15px;
   }
 }
 @media only all and (max-width: 991px) {
-  /* line 360, ../scss/custom.scss */
+  /* line 363, ../scss/custom.scss */
   .mq-list li {
     margin-right: 10px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 360, ../scss/custom.scss */
+  /* line 363, ../scss/custom.scss */
   .mq-list li {
     margin-right: 0.9%;
   }
 }
-/* line 375, ../scss/custom.scss */
+/* line 378, ../scss/custom.scss */
 .mq-list .smartphone {
   width: 8.1%;
 }
 @media only all and (min-width: 480px) and (max-width: 767px) {
-  /* line 375, ../scss/custom.scss */
+  /* line 378, ../scss/custom.scss */
   .mq-list .smartphone {
     width: 8%;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 375, ../scss/custom.scss */
+  /* line 378, ../scss/custom.scss */
   .mq-list .smartphone {
     width: 8.1%;
   }
 }
-/* line 384, ../scss/custom.scss */
+/* line 387, ../scss/custom.scss */
 .mq-list .tablet {
   width: 19.5%;
 }
 @media only all and (max-width: 767px) {
-  /* line 384, ../scss/custom.scss */
+  /* line 387, ../scss/custom.scss */
   .mq-list .tablet {
     width: 19.4%;
   }
 }
-/* line 390, ../scss/custom.scss */
+/* line 393, ../scss/custom.scss */
 .mq-list .netbook {
   width: 25.9%;
 }
-/* line 393, ../scss/custom.scss */
+/* line 396, ../scss/custom.scss */
 .mq-list .desktop {
   margin-right: 0;
   width: 40.5%;
 }
 
-/* line 400, ../scss/custom.scss */
+/* line 403, ../scss/custom.scss */
 .entry-content p {
   margin-bottom: 15px;
 }
-/* line 403, ../scss/custom.scss */
+/* line 406, ../scss/custom.scss */
 .entry-content img {
   margin: 10px 0 30px;
 }
 
-/* line 410, ../scss/custom.scss */
+/* line 413, ../scss/custom.scss */
 .credits td {
   padding: 3px !important;
 }
 @media only all and (max-width: 1199px) {
-  /* line 416, ../scss/custom.scss */
+  /* line 419, ../scss/custom.scss */
   .credits td {
     padding: 1px !important;
   }
 }
 
-/* line 422, ../scss/custom.scss */
+/* line 425, ../scss/custom.scss */
 .media, .description {
   margin-bottom: 30px;
 }
 
-/* line 426, ../scss/custom.scss */
+/* line 429, ../scss/custom.scss */
 .media img {
   margin: 0;
 }
-/* line 430, ../scss/custom.scss */
+/* line 433, ../scss/custom.scss */
 .media object {
   margin-right: 10px !important;
   margin-bottom: 15px !important;
 }
 
-/* line 435, ../scss/custom.scss */
+/* line 438, ../scss/custom.scss */
 .single-design .media {
   border: 1px solid black;
 }
@@ -1499,7 +1499,7 @@ a:hover {
 /*
  *  Admin Menu 
  */
-/* line 446, ../scss/custom.scss */
+/* line 449, ../scss/custom.scss */
 #adminmenu #menu-posts-design .wp-menu-image:before {
   content: '\f85' !important;
 }
