matched colors to cherry blossoms, began parallax tests

--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -32,6 +32,12 @@
     width: 100%;
     height: auto;
 }
+.pos-abs{
+    position: absolute;
+}
+.pos-rel{
+    position: relative;
+}
 
 @mixin center-vertically($h1, $h2) {
     position: fixed;
