--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -74,7 +74,7 @@ h3 {
     font-size: 80%;
     line-height: 130%;
     letter-spacing: 1px;
-    @include single-text-shadow;
+    // @include single-text-shadow;
 
     i {
         margin-right: 5px;
