--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -102,26 +102,36 @@ time, mark, audio, video {
   height: auto;
 }
 
-/* line 59, ../scss/_mixins.scss */
+/* line 35, ../scss/_mixins.scss */
+.pos-abs {
+  position: absolute;
+}
+
+/* line 38, ../scss/_mixins.scss */
+.pos-rel {
+  position: relative;
+}
+
+/* line 65, ../scss/_mixins.scss */
 #row-masthead {
   background-color: black;
   background-attachment: fixed;
   background-size: cover;
 }
 
-/* line 74, ../scss/_mixins.scss */
+/* line 80, ../scss/_mixins.scss */
 code, pre, .highlight {
   background-color: #666;
   border-color: #666;
 }
 
-/* line 78, ../scss/_mixins.scss */
+/* line 84, ../scss/_mixins.scss */
 .thumbnail {
   background-color: transparent;
   border: 0;
 }
 
-/* line 82, ../scss/_mixins.scss */
+/* line 88, ../scss/_mixins.scss */
 .design-slider, .mq-list li, .single-design .media, .hero-right {
   -webkit-box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.7);
   -moz-box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.7);
@@ -194,7 +204,7 @@ h1 a:hover {
 /* line 64, ../scss/_typography.scss */
 h2 {
   font-size: 230%;
-  color: #0074a2;
+  color: #bf7485;
 }
 
 /* line 69, ../scss/_typography.scss */
@@ -204,7 +214,6 @@ h3 {
   font-size: 80%;
   line-height: 130%;
   letter-spacing: 1px;
-  text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.6);
     /* @include transition (background, 0.75s);
     @include transition (padding, 0.75s);
 
@@ -219,7 +228,7 @@ h3 {
 h3 i {
   margin-right: 5px;
   margin-top: 1px;
-  color: #7e1e1b;
+  color: #60192b;
 }
 
 /* line 95, ../scss/_typography.scss */
@@ -284,7 +293,7 @@ p {
 
 /* line 21, ../scss/_navbar.scss */
 .navbar-inverse .navbar-brand {
-  color: #0074a2;
+  color: white;
 }
 
 /* line 25, ../scss/_navbar.scss */
@@ -361,8 +370,12 @@ p {
     transition: all, 0;
   }
 }
+/* line 84, ../scss/_navbar.scss */
+.navbar > .container {
+  background-color: rgba(0, 0, 0, 0.72);
+}
 
-/* line 85, ../scss/_navbar.scss */
+/* line 88, ../scss/_navbar.scss */
 .navbar-nav {
   margin: 0 0 0 -15px;
 }
@@ -370,57 +383,53 @@ p {
 /* 
  *  Active 
  */
-/* line 95, ../scss/_navbar.scss */
+/* line 98, ../scss/_navbar.scss */
 .navbar-inverse .navbar-nav > .active > a,
 .navbar-inverse .navbar-nav > .active > a:hover,
 .navbar-inverse .navbar-nav > .active > a:focus {
   background-color: transparent;
-  color: #d2322d;
+  color: #b12e4f;
 }
 
-/* line 99, ../scss/_navbar.scss */
+/* line 102, ../scss/_navbar.scss */
 .navbar-inverse {
-  background-color: black;
+  background-color: transparent;
   border: 0;
 }
 
-/* line 104, ../scss/_navbar.scss */
+/* line 107, ../scss/_navbar.scss */
 .navbar-collapse {
-  -webkit-box-shadow: 0;
-  -moz-box-shadow: 0;
-  box-shadow: 0;
   border-top: 0;
 }
 
-/* line 109, ../scss/_navbar.scss */
+/* line 112, ../scss/_navbar.scss */
 #nav-row {
   height: 50px;
-  background-color: #000;
   z-index: 999;
   position: fixed;
 }
 
-/* line 120, ../scss/_navbar.scss */
+/* line 123, ../scss/_navbar.scss */
 #nav-below .btn {
   margin-top: 20px;
 }
-/* line 123, ../scss/_navbar.scss */
+/* line 126, ../scss/_navbar.scss */
 #nav-below .btn-primary {
   margin-top: 10px;
 }
 
-/* line 130, ../scss/_navbar.scss */
+/* line 133, ../scss/_navbar.scss */
 .nav-previous {
   float: left;
   margin-right: 10px;
 }
 
-/* line 137, ../scss/_navbar.scss */
+/* line 140, ../scss/_navbar.scss */
 button {
   margin-right: 15px !important;
 }
 
-/* line 140, ../scss/_navbar.scss */
+/* line 143, ../scss/_navbar.scss */
 .btn-primary {
   -webkit-transition: background-color, 0.5s;
   -moz-transition: background-color, 0.5s;
@@ -428,65 +437,65 @@ button {
   transition: background-color, 0.5s;
 }
 
-/* line 145, ../scss/_navbar.scss */
+/* line 148, ../scss/_navbar.scss */
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active {
-  background-color: #004560;
-  border-color: #004560;
+  background-color: #a54c60;
+  border-color: #a54c60;
   -webkit-transition: background-color, 0.5s;
   -moz-transition: background-color, 0.5s;
   -o-transition: background-color, 0.5s;
   transition: background-color, 0.5s;
 }
 
-/* line 151, ../scss/_navbar.scss */
+/* line 154, ../scss/_navbar.scss */
 .btn-danger {
-  background-color: #d2322d;
-  border-color: #d2322d;
+  background-color: #b12e4f;
+  border-color: #b12e4f;
   -webkit-transition: background-color, 0.5s;
   -moz-transition: background-color, 0.5s;
   -o-transition: background-color, 0.5s;
   transition: background-color, 0.5s;
 }
 
-/* line 156, ../scss/_navbar.scss */
+/* line 159, ../scss/_navbar.scss */
 .btn-danger:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active {
-  background-color: #711b18;
-  border-color: #711b18;
+  background-color: #541625;
+  border-color: #541625;
   -webkit-transition: background-color, 0.5s;
   -moz-transition: background-color, 0.5s;
   -o-transition: background-color, 0.5s;
   transition: background-color, 0.5s;
 }
 
-/* line 164, ../scss/_navbar.scss */
+/* line 167, ../scss/_navbar.scss */
 .affix {
   top: 0;
 }
 @media only all and (max-width: 767px) {
-  /* line 164, ../scss/_navbar.scss */
+  /* line 167, ../scss/_navbar.scss */
   .affix {
     position: static;
   }
 }
 
 @media only all and (max-width: 767px) {
-  /* line 170, ../scss/_navbar.scss */
+  /* line 173, ../scss/_navbar.scss */
   .affix-top {
     position: static;
   }
 }
 
-/* line 179, ../scss/_navbar.scss */
+/* line 182, ../scss/_navbar.scss */
 .footer-widgets .nav {
   margin-top: 0px;
 }
-/* line 183, ../scss/_navbar.scss */
+/* line 186, ../scss/_navbar.scss */
 .footer-widgets .widget {
   border-left: 1px dashed #222;
   padding: 0 23px;
   margin-top: 30px;
 }
-/* line 188, ../scss/_navbar.scss */
+/* line 191, ../scss/_navbar.scss */
 .footer-widgets .widget h2 {
   font-family: "Dosis", sans-serif !important;
   font-size: 110%;
@@ -495,31 +504,31 @@ button {
   letter-spacing: 3px;
 }
 @media only all and (max-width: 767px) {
-  /* line 183, ../scss/_navbar.scss */
+  /* line 186, ../scss/_navbar.scss */
   .footer-widgets .widget {
     padding: 0;
     margin-top: 30px;
     border-left: 0;
   }
 }
-/* line 201, ../scss/_navbar.scss */
+/* line 204, ../scss/_navbar.scss */
 .footer-widgets .widget:first-child {
   border-left: 0;
 }
 @media only all and (max-width: 767px) {
-  /* line 204, ../scss/_navbar.scss */
+  /* line 207, ../scss/_navbar.scss */
   .footer-widgets .widget:last-child {
     padding: 0;
     margin-top: 0;
   }
 }
-/* line 211, ../scss/_navbar.scss */
+/* line 214, ../scss/_navbar.scss */
 .footer-widgets ul {
   padding: 0;
   list-style: none;
   list-style-type: none;
 }
-/* line 216, ../scss/_navbar.scss */
+/* line 219, ../scss/_navbar.scss */
 .footer-widgets .menu-item {
   margin: 3px 0;
   text-transform: uppercase;
@@ -531,47 +540,47 @@ button {
       }
   } */
 }
-/* line 221, ../scss/_navbar.scss */
+/* line 224, ../scss/_navbar.scss */
 .footer-widgets .menu-item:before {
   margin-left: 10px;
   margin-right: 5px;
   content: "\00bb ";
-  color: #d2322d;
+  color: #b12e4f;
 }
 
-/* line 236, ../scss/_navbar.scss */
+/* line 239, ../scss/_navbar.scss */
 #calendar_wrap {
   padding: 0;
 }
-/* line 240, ../scss/_navbar.scss */
+/* line 243, ../scss/_navbar.scss */
 #calendar_wrap .table-striped > tbody > tr:nth-child(odd) > td, #calendar_wrap .table-striped > tbody > tr:nth-child(odd) > th {
   background-color: #222;
 }
-/* line 243, ../scss/_navbar.scss */
+/* line 246, ../scss/_navbar.scss */
 #calendar_wrap .table > thead > tr > th, #calendar_wrap .table > tbody > tr > th, #calendar_wrap .table > tfoot > tr > th, #calendar_wrap .table > thead > tr > td, #calendar_wrap .table > tbody > tr > td, #calendar_wrap .table > tfoot > tr > td {
   border-top: 1px solid #444;
 }
-/* line 246, ../scss/_navbar.scss */
+/* line 249, ../scss/_navbar.scss */
 #calendar_wrap caption {
-  color: #0074a2;
+  color: #bf7485;
   margin-bottom: 10px;
 }
 
-/* line 253, ../scss/_navbar.scss */
+/* line 256, ../scss/_navbar.scss */
 #footer-menu li {
   width: 100%;
 }
 
-/* line 257, ../scss/_navbar.scss */
+/* line 260, ../scss/_navbar.scss */
 #root-footer, #footer {
   height: auto;
 }
-/* line 259, ../scss/_navbar.scss */
+/* line 262, ../scss/_navbar.scss */
 #root-footer p, #footer p {
   color: #666;
 }
 
-/* line 263, ../scss/_navbar.scss */
+/* line 266, ../scss/_navbar.scss */
 #footer {
   background-color: #000;
 }
@@ -579,7 +588,7 @@ button {
 /* 
  *  Kebo Tweets
  */
-/* line 276, ../scss/_navbar.scss */
+/* line 279, ../scss/_navbar.scss */
 .kebo-tweets a.kaccount, .kebo-tweets a.kdate {
   font-size: 96% !important;
 }
@@ -587,25 +596,25 @@ button {
 /*  
  *  Mailchimp Email Signup 
  */
-/* line 287, ../scss/_navbar.scss */
+/* line 290, ../scss/_navbar.scss */
 #mc_signup {
   padding: 0 !important;
 }
-/* line 289, ../scss/_navbar.scss */
+/* line 292, ../scss/_navbar.scss */
 #mc_signup .mergeRow {
   display: none !important;
   padding: 0 !important;
 }
-/* line 293, ../scss/_navbar.scss */
+/* line 296, ../scss/_navbar.scss */
 #mc_signup form {
   padding: 0 !important;
 }
 
-/* line 297, ../scss/_navbar.scss */
+/* line 300, ../scss/_navbar.scss */
 #mc_signup_submit {
   margin-top: 0;
   width: 100% !important;
-  background: #d2322d;
+  background: #b12e4f;
   padding: 10px;
   margin-top: 0 !important;
   border: 0;
@@ -620,21 +629,21 @@ button {
   -o-transition: background-color, 0.25s;
   transition: background-color, 0.25s;
 }
-/* line 307, ../scss/_navbar.scss */
+/* line 310, ../scss/_navbar.scss */
 #mc_signup_submit:hover {
-  background-color: #711b18;
+  background-color: #541625;
   -webkit-transition: background-color, 0.25s;
   -moz-transition: background-color, 0.25s;
   -o-transition: background-color, 0.25s;
   transition: background-color, 0.25s;
 }
 
-/* line 312, ../scss/_navbar.scss */
+/* line 315, ../scss/_navbar.scss */
 .mc_success_msg {
-  color: #0074a2;
+  color: #bf7485;
 }
 
-/* line 315, ../scss/_navbar.scss */
+/* line 318, ../scss/_navbar.scss */
 #mc_message {
   margin-bottom: 15px;
   margin-top: -2px;
@@ -642,12 +651,12 @@ button {
 
 @media only all and (max-width: 767px) {
   /* Logo */
-  /* line 324, ../scss/_navbar.scss */
+  /* line 327, ../scss/_navbar.scss */
   .navbar-brand {
     padding-left: 15px;
   }
 
-  /* line 327, ../scss/_navbar.scss */
+  /* line 330, ../scss/_navbar.scss */
   .navbar-collapse {
     background-color: #000;
   }
@@ -702,26 +711,36 @@ button {
   height: auto;
 }
 
-/* line 59, ../scss/_mixins.scss */
+/* line 35, ../scss/_mixins.scss */
+.pos-abs {
+  position: absolute;
+}
+
+/* line 38, ../scss/_mixins.scss */
+.pos-rel {
+  position: relative;
+}
+
+/* line 65, ../scss/_mixins.scss */
 #row-masthead {
   background-color: black;
   background-attachment: fixed;
   background-size: cover;
 }
 
-/* line 74, ../scss/_mixins.scss */
+/* line 80, ../scss/_mixins.scss */
 code, pre, .highlight {
   background-color: #666;
   border-color: #666;
 }
 
-/* line 78, ../scss/_mixins.scss */
+/* line 84, ../scss/_mixins.scss */
 .thumbnail {
   background-color: transparent;
   border: 0;
 }
 
-/* line 82, ../scss/_mixins.scss */
+/* line 88, ../scss/_mixins.scss */
 .design-slider, .mq-list li, .single-design .media, .hero-right {
   -webkit-box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.7);
   -moz-box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.7);
@@ -990,8 +1009,7 @@ section .col-sm-5, section .col-md-6 {
 body {
   padding: 0;
   overflow-x: hidden;
-  background-color: #333;
-  background: url('/wp-content/themes/jn-wpbs/assets/img/bg/goth.jpg?1387718055') black fixed;
+  background-color: #000;
 }
 
 /* line 23, ../scss/custom.scss */
@@ -1023,7 +1041,7 @@ table {
 
 /* line 49, ../scss/custom.scss */
 a {
-  color: #0074a2;
+  color: #bf7485;
 }
 /* line 51, ../scss/custom.scss */
 a:hover {
@@ -1218,8 +1236,8 @@ a:hover {
 @media only all and (min-width: 768px) {
   /* line 214, ../scss/custom.scss */
   .thumbnail:hover img {
-    border: 3px solid #d2322d;
-    border-bottom: 3px solid #d2322d;
+    border: 3px solid #b12e4f;
+    border-bottom: 3px solid #b12e4f;
     -webkit-transition: border, 0.5s;
     -moz-transition: border, 0.5s;
     -o-transition: border, 0.5s;
@@ -1227,7 +1245,7 @@ a:hover {
   }
   /* line 221, ../scss/custom.scss */
   .thumbnail:hover h3 {
-    background: #d2322d;
+    background: #b12e4f;
     padding-top: 20px;
     -webkit-transition: background-color, 0.2s;
     -moz-transition: background-color, 0.2s;
@@ -1368,8 +1386,8 @@ a:hover {
 
 /* line 342, ../scss/custom.scss */
 #frmCSCF .btn {
-  border: #0074a2;
-  background-color: #0074a2;
+  border: #bf7485;
+  background-color: #bf7485;
   color: white;
   -webkit-transition: background-color, 0.25s;
   -moz-transition: background-color, 0.25s;
@@ -1509,38 +1527,51 @@ a:hover {
 .above-header {
   overflow: visible;
   height: 500px;
-  background-color: black;
-  background: url('/wp-content/themes/jn-wpbs/assets/img/cherry-blossom.png?1387977909'), black;
-  background-position: -400px 0;
-  background-repeat: no-repeat;
 }
-/* line 462, ../scss/custom.scss */
+/* line 457, ../scss/custom.scss */
 .above-header h1 {
   margin-top: 50px;
   font-size: 80px;
 }
 @media only all and (max-width: 1199px) {
-  /* line 462, ../scss/custom.scss */
+  /* line 457, ../scss/custom.scss */
   .above-header h1 {
     font-size: 70px;
   }
 }
 @media only all and (max-width: 1199px) {
-  /* line 462, ../scss/custom.scss */
+  /* line 457, ../scss/custom.scss */
   .above-header h1 {
     font-size: 65px;
   }
 }
 
-/* line 473, ../scss/custom.scss */
+/* line 468, ../scss/custom.scss */
 #above-header-container {
   height: 100%;
+}
+
+/* line 472, ../scss/custom.scss */
+#cherry-blossoms {
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+}
+
+/* line 477, ../scss/custom.scss */
+#cb-a {
+  background: url('/wp-content/themes/jn-wpbs/assets/img/cherry-blossom.png?1387977909');
+  background-position: -400px 100px;
+  background-repeat: no-repeat;
+  height: 999px;
+  width: 100%;
+  z-index: 21;
 }
 
 /*
  *  Admin Menu 
  */
-/* line 482, ../scss/custom.scss */
+/* line 491, ../scss/custom.scss */
 #adminmenu #menu-posts-design .wp-menu-image:before {
   content: '\f85' !important;
 }
