--- a/assets/scss/_vars.scss
+++ b/assets/scss/_vars.scss
@@ -10,8 +10,8 @@ $section_height: 700px;
 $pad-md: 15px;
 
 /* Colors */
-$red:       #d2322d;
-$blue:      #0074a2;
+$red:       #b12e4f;//#d2322d;
+$blue:      #bf7485;//#0074a2;
 $cyan:      #2ea2cc;
 $green:     #5cb85c;
 $yellow:    #f0ad4e;
